# eu4rs

./: .env.example  .gitignore  AGENTS.md  CLAUDE_CODE.md  Cargo.toml  Korea1444_11_11.eu4  Korea1444_12_01.eu4  README.md  ai  calibrate.html  lcov.info  local_ci.ps1  meta  update_snapshots.ps1
.agent/workflows/: calibrate.md  emergency.md  explore.md  finalize-commit.md  improve_coverage.md  personalize.md  profile.md  review.md  switched.md  verify-commit.md
.antigravity/: buildings-plan-review.md  buildings-review-findings.md  estates-plan-review.md  estates-review-findings.md  subjects-plan-review.md  subjects-review-findings.md
.cargo/: config.toml
.claude/: settings.json
.claude/commands/: calibrate.md  emergency.md  explore.md  finalize-commit.md  improve-coverage.md  persona.md  personalize.md  review.md  switched.md  verify-commit.md
.github/: stats_template.html
.github/workflows/: ci.yml  ml.yml
.reviews/: 2025-12-19-evening-sprint.md
assets/: README.md
docs/: README.md  architecture.md  code_generation.md  code_statistics.md  coverage.md  data_layout.md  eu4data.md  eu4rs.md  file_formats.md  future_features.md  property_based_testing.md  roadmap.md  simulation.md  supported_fields.md  ui.md
docs/agents/: README.md  build-tools.md  calibration.md  claude-code.md  persona.md  routing.md  save-validation.md
docs/architecture/: state-management.md
docs/design/: architecture.md  cli-pipeline.md  gui-codegen-refactor.md  integrity.md  lobby.md  performance.md  save-validation.md  task-aggregation-strategies.md  task-based-parallelism.md  terrain_rendering.md  type-system.md  ui-automation-bridge.md  ui.md  ui_engine.md
docs/development/: cuda-setup.md  parallel-systems.md  performance.md
docs/planning/: agent-tooling-backlog.md  celestial-implementation.md  eu4game-plan.md  feature-probing.md  hre-implementation.md  roadmap.md  (+6 more)
eu4-bridge/: Cargo.toml
eu4-bridge/src/: actions.rs  bridge.rs  capture.rs  extraction.rs  input.rs  main.rs  orchestrator.rs  regions.rs
eu4_macros/: Cargo.toml
eu4data/: Cargo.toml  build.rs
eu4data/src/: adjacency.rs  advisortypes.rs  bookmarks.rs  cache.rs  climate.rs  countries.rs  coverage.rs  cultures.rs  defines.rs  diplomacy.rs  discovery.rs  estates.rs  event_modifiers.rs  history.rs  ideas.rs  lib.rs  localisation.rs  manifest.rs  map.rs  path.rs  policies.rs  regions.rs  religions.rs  subject_types.rs  technologies.rs  terrain.rs  timed_modifiers.rs  tradegoods.rs  tradenodes.rs  types.rs
eu4data/src/types/: tradegoods.rs
eu4data_derive/: Cargo.toml
eu4game/: Cargo.toml
eu4game/docs/: layout-engine.md
eu4game/examples/: inspect_terrain.rs
eu4game/src/: app_core.rs  bmfont.rs  camera.rs  dds.rs  flags.rs  input.rs  lib.rs  main.rs  main_tests.rs  observer_mode_tests.rs  render.rs  screen.rs  shader.wgsl  sim_thread.rs  terrain_mesh.rs  testing.rs  text.rs  text_shader.wgsl  text_tests.rs  world_loader.rs
eu4game/src/gui/: binder.rs  bookmarks.rs  core.rs  country_select.rs  country_select_left.rs  country_select_top.rs  frontend.rs  input.rs  interner.rs  layout.rs  layout_types.rs  legacy_loaders.rs  lobby_controls.rs  macro_test.rs  main_menu.rs  mod.rs  nine_slice.rs  panel_loaders.rs  panel_loaders_tests.rs  parser.rs  renderer.rs  save_games.rs  speed_controls.rs  sprite_cache.rs  state_machine_tests.rs  topbar.rs  types.rs  ui_root.rs  widget_cache.rs
eu4game/src/gui/primitives/: button.rs  checkbox.rs  container.rs  editbox.rs  icon.rs  listbox.rs  mod.rs  text.rs
eu4game/tests/goldens/: README.md
eu4rs/: Cargo.toml
eu4sim/: Cargo.toml
eu4sim-ai/: Cargo.toml
eu4sim-ai/src/: bridge.rs  device.rs  lib.rs  llm_ai.rs  model.rs  prompt.rs
eu4sim-ai/tests/: cuda_integration.rs  device_smoke.rs
eu4sim-core/: Cargo.toml  build.rs
eu4sim-core/proptest-regressions/: fixed.txt
eu4sim-core/src/: alliance_enforcement_tests.rs  bounded.rs  buildings.rs  config.rs  estates.rs  fixed.rs  fixed_generic.rs  government.rs  ideas.rs  input.rs  lib.rs  metrics.rs  modifiers.rs  profiling.rs  state.rs  step.rs  step_tests.rs  subjects.rs  testing.rs  trade.rs
eu4sim-core/src/ai/: greedy.rs  mod.rs
eu4sim-core/src/observer/: capnp_serialize.rs  console.rs  datagen.rs  event_log.rs  mod.rs
eu4sim-core/src/simd/: mod.rs  tax.rs  tax32.rs
eu4sim-core/src/systems/: advisors.rs  alliance.rs  attrition.rs  buildings.rs  celestial.rs  coalitions.rs  colonization.rs  combat.rs  coring.rs  development.rs  estates.rs  estates_tests.rs  expenses.rs  force_limits.rs  hre.rs  ideas.rs  ideas_tests.rs  institutions.rs  mana.rs  manpower.rs  mod.rs  movement.rs  naval_combat.rs  policies.rs  production.rs  reformation.rs  siege.rs  stats.rs  taxation.rs  tech.rs  trade_income.rs  trade_power.rs  trade_value.rs  tribute.rs  war_score.rs
eu4sim-verify/: Cargo.toml
eu4sim-verify/src/: coverage.rs  diff.rs  extract.rs  hydrate.rs  ledger_comparison.rs  lib.rs  main.rs  melt.rs  parse.rs  parse_tests.rs  predict.rs  predict_tests.rs  report.rs  verify.rs
eu4sim/src/: lib.rs  loader.rs  main.rs  tui.rs
eu4sim/tests/: cli.rs
eu4tokens/: Cargo.toml  README.md
eu4tokens/src/: elf.rs  main.rs  pe.rs
eu4txt/: .gitignore  Cargo.toml
eu4viz/: Cargo.toml
eu4viz/src/: args.rs  camera.rs  datagen.rs  logger.rs  main.rs  ops.rs  renderer.rs  shader.wgsl  state.rs  testing.rs  text.rs  timeline.rs  ui.rs  window.rs
eu4viz/src/ui/: tests.rs
eu4viz/tests/: cli.rs
game_pathfinding/: Cargo.toml
schemas/: README.md  training.capnp
scripts/: DIRECTML.md  README.md  ROCM.md  analyze_gui_issues.py  analyze_tracy.py  eu4_training.ipynb  eu4_training_gemma3.ipynb  eu4_training_smollm.ipynb  inference_server.py  inspect_data.py  load_training_data.py  pyproject.toml  setup_rocm.ps1  train_ai.py
xtask/: Cargo.toml
xtask/src/: gui_codegen.rs  main.rs  personalize.rs  profile.rs  region_gen.rs  train.rs
xtask/src/gui_codegen/: codegen.rs  parser.rs  types.rs
xtask/src/region_gen/: codegen.rs  gui_parser.rs  mapping.rs  position_calculator.rs  resolver.rs  types.rs
xtask/tests/: cli.rs
(+44 files in other folders)
