[workspace]
members = [
    "eu4data",
    "eu4data_derive",
    "eu4viz",
    "eu4txt",
    "xtask",
    "eu4sim",
    "eu4sim-core",
    "eu4sim-ai",
    "eu4-bridge",
    "game_pathfinding",
    "eu4tokens",
    "eu4sim-verify",
    "eu4game", "eu4_macros",
]
resolver = "2"

# === Build Profile Optimizations ===

# Dev builds: fast compile, no optimization
[profile.dev]
opt-level = 0
debug = true

# Test builds: slight optimization for faster test execution
[profile.test]
opt-level = 1

# Optimize all dependencies even in dev/test builds
# This is a big win: dependencies compile once with optimizations,
# while your code stays fast to compile
[profile.dev.package."*"]
opt-level = 2
debug = 0       # No debug info for dependencies

[profile.test.package."*"]
opt-level = 2

# === CUDA 13.1 Compatibility ===
# ug-cuda 0.5.0 uses cudarc 0.17.3 via workspace, which only supports CUDA ≤13.0
# Use mayocream's PR branch (github.com/LaurentMazare/ug/pull/12) until merged
[patch.crates-io]
ug = { git = "https://github.com/mayocream/ug", branch = "bump/cudarc" }
ug-cuda = { git = "https://github.com/mayocream/ug", branch = "bump/cudarc" }
