[package]
name = "eu4-bridge"
version = "0.1.0"
edition = "2024"
description = "Bridge between real EU4 game and AI via screen capture"

[dependencies]
# Window capture (cross-platform: X11, Wayland, Windows, macOS)
xcap = "0.0.14"

# Image processing
image = "0.25"
imageproc = "0.25"  # For drawing calibration overlays

# OCR (pure Rust, no native deps)
ocrs = "0.9"
rten = "0.13"  # Must match ocrs's rten version

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
dirs = "6.0"  # For finding cache directory

# Local crates
eu4sim-core = { path = "../eu4sim-core" }
eu4sim-ai = { path = "../eu4sim-ai" }

# Keyboard/mouse input (cross-platform)
enigo = "0.2"
