[package]
name = "eu4data"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.4.0"
encoding_rs = "0.8.35"
encoding_rs_io = "0.1.7"
eu4txt = { version = "0.1.0", path = "../eu4txt" }
rayon = "1.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[dev-dependencies]
eu4txt = { path = "../eu4txt" }
tempfile = "3.23.0"
