[package]
name = "eu4sim-ai"
version = "0.1.0"
edition = "2024"
description = "LLM-based AI inference for EU4 simulation"

[dependencies]
# Candle ML framework pinned to commit ab6d97ec:
# - Has cudarc 0.18.1 for CUDA 13.1 support
# - Before MOE WMMA kernels (f2d5aab) that require Ampere+ GPUs
# This allows building on Turing (RTX 20xx, sm_75) GPUs
candle-core = { git = "https://github.com/huggingface/candle", rev = "ab6d97ec" }
candle-nn = { git = "https://github.com/huggingface/candle", rev = "ab6d97ec" }
candle-transformers = { git = "https://github.com/huggingface/candle", rev = "ab6d97ec" }

# Model downloading from HuggingFace
hf-hub = "0.3"

# Tokenization
tokenizers = "0.21"

# Model weights
safetensors = "0.5"
bytemuck = "1.14"
half = "2.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
log = "0.4"

# Sampling
rand = "0.8"

# Local crates
eu4sim-core = { path = "../eu4sim-core" }

[dev-dependencies]
tempfile = "3"

[features]
default = []

# Convenience feature flags for GPU acceleration.
# These propagate through to candle crates automatically.
# CI does NOT enable these (requires toolkit). Use for local testing only.
cuda = [
    "candle-core/cuda",
    "candle-nn/cuda",
    "candle-transformers/cuda",
]
metal = [
    "candle-core/metal",
    "candle-nn/metal",
    "candle-transformers/metal",
]

# Usage:
#   cargo test -p eu4sim-ai                    # CPU only (CI-safe)
#   cargo test -p eu4sim-ai --features cuda    # With CUDA (local only)
#   cargo test -p eu4sim-ai --features metal   # With Metal (macOS only)
