[package]
name = "eu4sim-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
thiserror = "1.0"
eu4data = { path = "../eu4data" }
serde_json = "1.0"
multiversion = "0.7"
game_pathfinding = { version = "0.1.0", path = "../game_pathfinding" }
rand = "0.8.5"

[dev-dependencies]
proptest = "1.6"
