[package]
name = "eu4sim-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
thiserror = "1.0"
anyhow = "1.0"
eu4data = { path = "../eu4data" }
serde_json = "1.0"
multiversion = "0.7"
game_pathfinding = { version = "0.1.0", path = "../game_pathfinding" }
rand = "0.8.5"
im = { version = "15.1", features = ["serde"] }
zip = { version = "2.2", default-features = false, features = ["deflate"] }
rayon = "1.10"
capnp = "0.20"

[build-dependencies]
capnpc = "0.20"

[dev-dependencies]
proptest = "1.6"
