[package]
name = "eu4sim-core"
version = "0.1.0"
edition = "2021"

[features]
default = []
tracy = ["dep:tracing-tracy", "dep:tracy-client", "dep:tracing-subscriber"]

[dependencies]
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
thiserror = "1.0"
anyhow = "1.0"
eu4data = { path = "../eu4data" }
serde_json = "1.0"
multiversion = "0.7"
game_pathfinding = { version = "0.1.0", path = "../game_pathfinding" }
rand = "0.8.5"
im = { version = "15.1", features = ["serde"] }
rustc-hash = "2.1"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
rayon = "1.10"
capnp = "0.20"

# Tracy profiling (optional)
# Note: We don't use "ondemand" - Tracy always emits when feature is enabled.
# This is fine since we only build with tracy when explicitly profiling.
# Version mapping: tracy-client 0.18 + tracy-client-sys 0.28 = Tracy 0.13.1
tracing-tracy = { version = "0.11", optional = true, default-features = false }
tracy-client = { version = "0.18", optional = true }
tracing-subscriber = { version = "0.3", optional = true }

[build-dependencies]
capnpc = "0.20"

[dev-dependencies]
proptest = "1.6"
