[package]
name = "eu4sim-verify"
version = "0.1.0"
edition = "2021"
description = "Verify EU4 simulation accuracy against save files"

[[bin]]
name = "eu4sim-verify"
path = "src/main.rs"

[lib]
name = "eu4sim_verify"
path = "src/lib.rs"

[dependencies]
eu4sim-core = { path = "../eu4sim-core" }
eu4sim = { path = "../eu4sim" }
eu4data = { path = "../eu4data" }
eu4save = "0.8"
jomini = "0.34"
zip = "2.0"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"

[dev-dependencies]
tempfile = "3.10"
