[package]
name = "eu4viz"
version = "0.1.0"
edition = "2024"

[dependencies]
ab_glyph = "0.2.32"
bytemuck = { version = "1.24.0", features = ["derive"] }
clap = { version = "4.5.53", features = ["derive"] }
env_logger = "0.11.8"
eu4data = { version = "0.1.0", path = "../eu4data" }
eu4txt = { path = "../eu4txt" }
image = "0.25.9"
log = "0.4.29"
pollster = "0.4.0"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
wgpu = "0.20.0"
winit = "0.29.15"

[dev-dependencies]
tempfile = "3.3"
assert_cmd = "2.0"
predicates = "3.0"
