[project]
name = "scripts"
version = "0.1.0"
description = "EU4 AI training scripts with Cap'n Proto data loading"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.4.2",
    "peft>=0.18.0",
    "pycapnp>=2.0.0",
    "safetensors>=0.7.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "trl>=0.26.2",
]

# NOTE: DirectML support is available but requires manual installation due to
# torch version conflicts. If you want DirectML (AMD/Intel GPU on Windows):
#   1. Create a separate venv with torch 2.4.1
#   2. pip install torch-directml
# The train_ai.py script will auto-detect it when available.

[dependency-groups]
dev = [
    "ruff>=0.9.1",
]

[project.scripts]
train-ai = "train_ai:main"
load-training = "load_training_data:main"
