[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json", "native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
regex = "1.10"
eu4data = { path = "../eu4data" }
rand = "0.9.2"
sha2 = "0.10.9"
base64 = "0.22.1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
